<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.project.lanka.code3.GridActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/about"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="never" />
    <item
        android:id="@+id/order"
        android:orderInCategory="100"
        android:title="@string/orders"
        app:showAsAction="always" />
    <item
        android:id="@+id/cart"
        android:orderInCategory="100"
        android:title="@string/cart"
        app:showAsAction="never" />
    <item
        android:id="@+id/notifications"
        android:orderInCategory="100"
        android:title="@string/notifications"
        app:showAsAction="never" />
    <item
        android:id="@+id/help"
        android:orderInCategory="100"
        android:title="@string/help"
        app:showAsAction="never" />

    <item
        android:id="@+id/logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>
